--- a/reviews/templates/reviews/books_list.html
+++ b/reviews/templates/reviews/books_list.html
@@ -1,37 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookr</title>
-</head>
 
-<body>
-    <h1>Book Review application</h1>
-    <hr>
-    <ul>
-        {% for item in book_list %}
-        <li>
-            <span>Title: </span> <span>{{ item.book.title }}</span>
-            <br>
-            <span>Publisher: </span><span>{{ item.book.publisher }}</span>
-            <br>
-            <span>Publication Date: </span><span>{{ item.book.publication_date }}</span>
-            <br>
-            <span>Rating: </span><span>{{ item.book_rating }}</span>
-            <br>
-            <span>Number of reviews: </span><span>{{ item.number_of_reviews }}</span>
-            <br>
-            {% if item.book_rating is null %}
-            <span>Provide a rating and write the first review for this book.</span>
-            <br>
-            {% endif %}
-        </li>
+{% block content %}
+<ul class="list-group">
+    {% for item in book_list %}
+    <li class="list-group-item">
+        <span class="text-info">Title: </span> <span>{{ item.book.title }}</span>
         <br>
-        {% endfor %}
-    </ul>
-</body>
-
-</html>
+        <span class="text-info">Publisher: </span><span>{{ item.book.publisher }}</span>
+        <br>
+        <span class="text-info">Publication Date: </span><span>{{ item.book.publication_date }}</span>
+        <br>
+        <span class="text-info">Rating: </span ><span class="badge badge-primary badge-pill">{{ item.book_rating }}</span>
+        <br>
+        <span class="text-info">Number of reviews: </span><span>{{ item.number_of_reviews }}</span>
+        <br>
+        {% if item.book_rating is null %}
+        <span class="text-secondary">Provide a rating and write the first review for this book.</span>
+        <br>
+        {% endif %}
+        <a class="btn btn-primary btn-sm active" role="button" aria-pressed="true" href="/book/{{ item.book.id }}/">Reviews</a></li>
+    </li>
+    <br>
+    {% endfor %}
+</ul>
+{% endblock %}
