--- a/reviews/templates/reviews/books_list.html
+++ b/reviews/templates/reviews/books_list.html
@@ -19,7 +19,7 @@
         <span class="text-secondary">Provide a rating and write the first review for this book.</span>
         <br>
         {% endif %}
-        <a class="btn btn-primary btn-sm active" role="button" aria-pressed="true" href="/book/{{ item.book.id }}/">Reviews</a></li>
+        <a class="btn btn-primary btn-sm active" role="button" aria-pressed="true" href="{% url 'book_details' item.book.pk %}">Reviews</a></li>
     </li>
     <br>
     {% endfor %}
